Changeing path to link

--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -200,15 +200,15 @@
               </div>
 
               <input
-                class="files"
-                type="file"
-                accept="image/*"
+                class="inputf"
+                placeholder="Write here ...."
+                type="text"
                 name="moviePoster"
                 required />
               <input
-                class="files"
-                type="file"
-                accept="image/*"
+                class="inputf"
+                placeholder="Write here ...."
+                type="text"
                 name="movieBgPic"
                 required />
 
@@ -330,15 +330,15 @@
               </div>
 
               <input
-                class="files"
-                type="file"
-                accept="image/*"
+                class="inputf"
+                placeholder="Write here ...."
+                type="text"
                 name="SPoster"
                 required />
               <input
-                class="files"
-                type="file"
-                accept="image/*"
+                class="inputf"
+                placeholder="Write here ...."
+                type="text"
                 name="SbgPic"
                 required />
 
@@ -459,15 +459,15 @@
               </div>
 
               <input
-                class="files"
-                type="file"
-                accept="image/*"
+                class="inputf"
+                placeholder="Write here ...."
+                type="text"
                 name="Tposter"
                 required />
               <input
-                class="files"
-                type="file"
-                accept="image/*"
+                class="inputf"
+                placeholder="Write here ...."
+                type="text"
                 name="TbgPic"
                 required />
 
